--- a/src/components/pages/search-result.pug
+++ b/src/components/pages/search-result.pug
@@ -368,6 +368,7 @@ include ../base/Checkbox.pug
 include ../base/SearchResult.pug
 
 block content
+  include ../parts/_global-navi.pug
   section.section-content__header
     +Banner({
       title: "選んで探す 検索結果",
