--- a/src/components/pages/search.pug
+++ b/src/components/pages/search.pug
@@ -28,6 +28,7 @@ include ../base/Button.pug
 include ../base/Banner.pug
 
 block content
+	include ../parts/_global-navi.pug
 	+Breadcrumb({items: breadcrumbItem})
 
 	section.section-content__header
