--- a/src/components/pages/detail.pug
+++ b/src/components/pages/detail.pug
@@ -2,6 +2,32 @@ extends ../common/_layout
 
 block pageOption
   -
+    const breadcrumbItem = [
+      {
+        text : "トップページ",
+        link : "/",
+        isCurrent : false
+
+      },
+      {
+        text : "市民トップ",
+        link : "./citizen.html",
+        isCurrent : false
+
+      },
+      {
+        text : "妊娠から子育て",
+        link : "./category-top.html",
+        isCurrent : false
+
+      },
+      {
+        text : "妊娠の届出・母子健康手帳の交付",
+        link : "./detail.html",
+        isCurrent : true
+
+      },
+    ]
     const anchorNavList = [
       {
         link: "#article_1",
@@ -33,10 +59,13 @@ block pageOption
       },
     ]
 
+include ../base/Breadcrumb.pug
 include ../base/ContactBanner.pug
 
 block content
   include ../parts/_global-navi.pug
+  +Breadcrumb({items: breadcrumbItem})
+
   section.article
     h1.article__title 
       | 妊娠の届出・母子健康手帳の交付
