--- a/src/stylesheets/base/_breadcrumb.scss
+++ b/src/stylesheets/base/_breadcrumb.scss
@@ -14,7 +14,7 @@ nav.breadcrumb li {
 
 nav.breadcrumb li + li::before {
 	display: inline-block;
-	margin: 0 0.25em;
+	margin: 0 16px;
 	transform: rotate(15deg);
 	border-right: 0.1em solid currentColor;
 	height: 0.8em;
