--- a/src/stylesheets/page/_category-top.scss
+++ b/src/stylesheets/page/_category-top.scss
@@ -41,7 +41,7 @@
 		&__list {
 			display: flex;
 			flex-direction: column;
-			gap: 8px;
+			gap: 4px;
 		}
 		&__item {
 			@extend .box-shadow;
@@ -72,7 +72,7 @@
 				height: 70px;
 			}
 			&__item:not(:first-child) {
-				width: calc(100% / 2 - 8px);
+				width: calc(50% - 2px);
 			}
 		}
 	}
