--- a/src/components/pages/index.pug
+++ b/src/components/pages/index.pug
@@ -17,5 +17,8 @@ block content
 		include ../parts/_top-menu.pug
 
 	section.section-content.bg-light
+		include ../parts/_feature.pug
+
+	section.section-content
 		include ../parts/_top-menu-2.pug
 
