--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -22,6 +22,7 @@
 @import "base/tag";
 @import "base/search-result";
 @import "base/navigation";
+@import "base/card";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
@@ -40,6 +41,7 @@
 @import "parts/slider";
 @import "parts/hero";
 @import "parts/anchor-list";
+@import "parts/feature";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
