--- a/src/components/parts/_feature.pug
+++ b/src/components/parts/_feature.pug
@@ -6,18 +6,18 @@
       description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
       link: "pregnant_child_icon.png"
     },
-    //- {
-    //-   imgPath: "pregnant_child_icon.png",
-    //-   title: "仮設住宅の設置状況",
-    //-   description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
-    //-   link: "#"
-    //- },
-    //- {
-    //-   imgPath: "pregnant_child_icon.png",
-    //-   title: "仮設住宅の設置状況",
-    //-   description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
-    //-   link: "#"
-    //- },
+    {
+      imgPath: "pregnant_child_icon.png",
+      title: "仮設住宅の設置状況",
+      description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
+      link: "#"
+    },
+    {
+      imgPath: "pregnant_child_icon.png",
+      title: "仮設住宅の設置状況",
+      description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
+      link: "#"
+    },
   ]
 
 
