--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -23,6 +23,7 @@
 @import "base/search-result";
 @import "base/navigation";
 @import "base/card";
+@import "base/pagenation";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
