fix: カテゴリトップにpagination追加

--- a/src/components/base/Pagination.pug
+++ b/src/components/base/Pagination.pug
@@ -1,4 +1,4 @@
-mixin Pagenation(params={})
+mixin Pagination(params={})
   - const props = Object.assign({}, params)
   .pagination
     .pagination__btn
