--- a/src/components/parts/_feature.pug
+++ b/src/components/parts/_feature.pug
@@ -2,19 +2,19 @@
   const cardList = [
     {
       imgPath: "",
-      title: "仮設住宅の設置状況",
-      description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
-      link: "pregnant_child_icon.png"
-    },
-    {
-      imgPath: "pregnant_child_icon.png",
-      title: "仮設住宅の設置状況",
+      title: "防災特設サイトを公開しました",
       description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
       link: "#"
     },
     {
       imgPath: "pregnant_child_icon.png",
-      title: "仮設住宅の設置状況",
+      title: "防災特設サイトを公開しました",
+      description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
+      link: "#"
+    },
+    {
+      imgPath: "pregnant_child_icon.png",
+      title: "防災特設サイトを公開しました",
       description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
       link: "#"
     },
