--- a/src/stylesheets/base/_card.scss
+++ b/src/stylesheets/base/_card.scss
@@ -1,7 +1,7 @@
 .card {
 	@extend .box-shadow;
 	width: 100%;
-
+	border-radius: 8px;
 	&__link {
 		&:hover {
 			opacity: 0.8;
@@ -9,10 +9,27 @@
 	}
 
 	.card-img {
-		flex: 100%;
-		&__img {
-			object-fit: fill;
+		width: 100%;
+		height: auto;
+		position: relative;
+		&::before {
+			content: "";
+			display: block;
+			padding-top: 100%;
+		}
+		&__container {
+			position: absolute;
+			top: 0;
+			left: 0;
 			width: 100%;
+			height: 100%;
+			overflow: hidden;
+		}
+		&__img {
+			display: block;
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
 		}
 	}
 	.card-text {
@@ -40,6 +57,31 @@
 			font-weight: bold;
 			&:hover {
 				text-decoration: underline;
+			}
+		}
+	}
+}
+
+@media (max-width: breakpoint(sp)) {
+	.card {
+		&__link {
+			display: flex;
+			height: 160px;
+		}
+		.card-img {
+			width: 160px;
+		}
+		.card-text {
+			flex: 1;
+			&__title {
+				font-size: 18px;
+			}
+			&__description {
+				display: none;
+			}
+			&__more {
+				margin-top: 0;
+				font-size: 12px;
 			}
 		}
 	}
