--- a/src/stylesheets/parts/_feature.scss
+++ b/src/stylesheets/parts/_feature.scss
@@ -8,7 +8,7 @@
 		gap: 16px;
 
 		&__item {
-			width: calc(100% / 3 - 16px);
+			width: calc(100% / 2 - 16px);
 
 			&--single {
 				width: 100%;
@@ -18,6 +18,12 @@
 						flex-direction: row;
 						align-items: stretch;
 					}
+				}
+				.card-img {
+					width: 320px;
+				}
+				.card-text {
+					flex: 1;
 				}
 			}
 		}
@@ -34,10 +40,11 @@
 		.card-list {
 			&__item {
 				&--single {
-					.card {
-						&__link {
-							display: block;
-						}
+					.card-img {
+						width: 160px;
+					}
+					.card-text {
+						flex: 1;
 					}
 				}
 			}
